--- a/todo.txt
+++ b/todo.txt
@@ -1,29 +1,35 @@
 Current Work Todo
 
-[ ] Create a stage for the PIXI renderer - renderer
-- takes in the intermediate language
-- provide add/delete function for each child nodelist
+[ ] Finish off the primitives
+- Rectangle, Circle, Polygon, Path
 
-[ ] Nodelist and LazyNodelist
-- generic for stages/renderers
-- caching the nodes
-- use the add/delete function to 
+[ ] A function that create Renderer component according to views definiation
+- pass down the view definition to the canvas
 
 [ ] An Context system for intermediate language - parser
 - something like a speciman context
 - takes in the search trace
 - provide intermediate language for the renderer
 
+[ ] Provide a set of pre-defined components/views for user to choose from
+- user could display the search trace without defining views and components
+
 [ ] Window system for multiple views - side by side
 - As a parent component relative to xxxStage
 - Manage the window system
 - Choose which Stage to use in each of the view
 
-[ ] Work on drawing text onto them in memory efficent ways
-
-[ ] Performance optimize
-- create algorithm reduce the graphics objects in lazynodelist
-
 [ ] Convert more Search Traces into current format
 
 [ ] Create merger of eventList information so that delta eventLists will work
+
+[ ] Documentation
+
+[*] Create a stage for the PIXI renderer - renderer
+- takes in the intermediate language
+- provide add/delete function for each child nodelist
+
+[*] Nodelist and LazyNodelist
+- generic for stages/renderers
+- caching the nodes
+- use the add/delete function to 
