infopanel show info after step back/forward

--- a/todo.txt
+++ b/todo.txt
@@ -17,6 +17,8 @@ QUESTION
 
 OPEN
 
+[ ] Hover over
+
 [ ] Playback component for animation support - render/renderer/generic/Playback.tsx
 - layered system for tiles
 
