--- a/todo.txt
+++ b/todo.txt
@@ -4,11 +4,6 @@ ISSUES/BUGS
 
 [ ] The complexity of computed properties is relatively small (currently no special strings besides 'context' can be used, as they will be interpreted as variables eg. undefined would be converted to context[undefined])
 
-[x] id and pId should be able to be Strings
-
-[x] The currentEventContext will break for search traces requiring information from parents every time it hits one of the LazyNodeList thresholds, as the allEvents property is actually only the events that are draw by the Nodelist. This needs to be fixed, maybe by using a global context or something. If stored once in a global context this may also reduce the memory usage.
-
-
 QUESTION
 
 [x] Current playback system
@@ -36,20 +31,22 @@ required here, not sure it's better or not.
  - [*] Grid Trace
  - [*] Road Network Trace
  - [*] Mesh Trace
- - [ ]  Tree Trace
+ - [ ] Tree Trace
  - [*] 9 Tile Puzzle Trace
  - [ ] Multi Agent Path Finder
  - [*] Bidirectional (Grid/Road versions) Trace
 
 [ ] Improve the process in which the currentEventContexts are created (maybe memoizee them)
 
-[ ] Fix issue where if the parent undefined (starting event or something) the application wont error (if they used something like parent.x)
+[ ] Fix issue where if the parent undefined (starting event or something) the application wont error (if they used something like parent.x) (this is techincally fixed but probs a better way todo it)
 
 [ ] Maybe make the text property in the search traces an Object with properties like displayText, Colour, position (relative to parent Object) etc. Also maybe add some more properties to existing primitives like a lineWidth to the path primitive. 
 
 [ ] Create merger of eventList information so that delta eventLists will work
 
 [ ] Documentation
+
+[ ] Create the functions which generate x and y coordinates for the tree view.
 
 
 FINISHED
