--- a/todo.txt
+++ b/todo.txt
@@ -38,7 +38,7 @@ required here, not sure it's better or not.
 
 [ ] Improve the process in which the currentEventContexts are created (maybe memoizee them)
 
-
+[ ] Allow for the two different view types to be drawn (search and state views)
 
 [ ] Create merger of eventList information so that delta eventLists will work
 
